syntax = "proto3";
 
package Greeter;
 
service Greet {
	rpc SayHello (HelloRequest) returns (HelloReply);
	rpc GetTime (TimeRequest) returns (TimeReply);
	rpc GetRandomNumber (RanNumRequest) returns (stream RanNumReply);
	rpc GetFactorial (stream FactorialRequest) returns (stream FactorialReply);
}
 
message HelloRequest {
	string name = 1;
}
 
message HelloReply {
	string message = 1;
}


message TimeRequest {
}
 
message TimeReply {
	int64 stamp = 1;
}

message RanNumRequest {
}
 
message RanNumReply {
	int64 num = 1;
}

message FactorialRequest {
	int64 num = 1;
}

message FactorialReply {
	int64 num = 1;
	int64 BaseNum = 2;
}